      TODO: Test
    - Switch to response header Storage-Revision with the number of changes
      schema: revision/number of changes, e.g. Storage-Revision: 123/45
      without changes Storage-Revision: 123/0
      TODO: Add description in manual
      TODO: Test
CR: Service: Review and optimization of CONNECT
    - Storage must be initialized mandatory with CONNECT before it can be used.
CR: Test: Review and optimization
    - Added option XMEX_DEBUG_MODE
      The activation of debug mode is primarily planned for unit tests and
      enforces the auto incremental revision type. In addition, the hashed
      headers for request, response and storage are added to the response,
      which can be checked by the unit tests.
      TODO: Add description in manual
      TODO: Test
    - Switch to the use of XMEX_DEBUG_MODE
      TODO: Test
    - Switch to new hashes in the response header
      Trace-Request-Hash, Trace-Request-Header-Hash, Trace-Request-Data-Hash
      Trace-Response-Hash, Trace-Response-Header-Hash, Trace-Response-Data-Hash
      Trace-Storage-Hash

1.3.1 20240801
BF: Review: Optimization/Corrections
BF: Build: Optimization / correction of the release info process
CR: Build: Releases are now only available on the release page
CR: OpenAPI: Added the missing OpenAPI Specification
CR: Project: Moved repository to xml-micro-exchange-php
NT: Harmonization of version numbers for the different implementations
    Major and minor describe the API, patch refers to the implementation.
    The version of OpenAPI therefore only uses major and minor, patch is always 0.

1.3.0 20210525
BF: Service: Uniform use of status 204 for 202 / 404
    Status 404 always refers storage and not entities/addressed targets in the storage.
BF: Service: Uniform use of status 204 for 404 in relation to targets in the storage (axes)
    Status 404 is now only used in relation to storage.